--- a/tviser/assets/scss/main-page.scss
+++ b/tviser/assets/scss/main-page.scss
@@ -1,8 +1,91 @@
+.overlay-header {
+  width: 100%;
+  height: 40px;
+  background: #33363A;
+  position: relative;
+ .v-select{
+   text-transform: uppercase !important;
+
+ }
+  &-select {
+    width: 60px;
+
+    input {
+      color: #fff;
+    }
+
+    .vs__dropdown-toggle {
+      height: 23px;
+    }
+
+    .vs__selected {
+      margin: 0 !important;
+    }
+
+    .vs__selected {
+      color: #fff;
+    }
+  }
+
+  &-border {
+    height: 23px;
+    width: 1px;
+    margin-right: 10px;
+    background-color: #fff;
+  }
+
+  .container {
+    height: 100%;
+
+    .row {
+      height: 100%;
+    }
+  }
+
+  &-row {
+    display: flex;
+  }
+}
+
+.overlay-subheader {
+  position: relative;
+  width: 100%;
+  height: 65px;
+  background: #F7F7F7;
+
+  .header-container {
+    height: 100%;
+  }
+
+  .row {
+    justify-content: space-between;
+    height: 100%;
+    padding: 0 10px;
+  }
+
+  &-help {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 27px;
+    display: flex;
+    align-items: center;
+    color: #33363A;
+
+    a {
+      margin-left: 15px;
+      display: flex;
+      padding: 7px 20px;
+      align-items: center;
+      justify-content: center;
+      border: 1px solid #33363A;
+      color: #33363A;
+    }
+  }
+}
 
 .header {
   &-container {
     .row {
-      height: 62px;
       align-items: center;
     }
 
@@ -10,34 +93,72 @@
       margin-right: 40px;
     }
 
-    input {
-      width: 217px;
-      height: 34px;
-      background: #FFFFFF;
-      border: 2px solid #1E2023;
-      box-sizing: border-box;
-      border-radius: 5px;
-      padding: 9px 12px;
+
+    .overlay-header-input {
+      position: relative;
+      width: 165px;
+      height: 100%;
+
+      input {
+        width: 165px;
+        height: 18px;
+        font-size: 13px;
+        line-height: 18px;
+        display: flex;
+        align-items: center;
+        color: #FFFFFF;
+        background-color: transparent;
+        border: none !important;
+        border-radius: 0 !important;
+        background-image: url("../../static/images/icons/counry.svg");
+        background-size: 18px;
+        position: relative;
+        padding: 12px 12px 12px 38px;
+      }
+    }
+
+    .overlay-header-input::after {
+      content: '';
+      border-bottom: 1px solid #fff;
+      position: absolute;
+      z-index: 1101;
+      width: 65%;
+      height: 1px;
+      left: 12px;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+    }
+
+    .autocomplete-input:focus, .autocomplete-input[aria-expanded=true] {
+      background-color: transparent !important;
+      outline: none;
+      box-shadow: none !important;
     }
 
     input::placeholder {
-      font-size: 12px;
-      line-height: 16px;
-      color: #000000;
-      opacity: 1;
+      font-size: 13px;
+      line-height: 18px;
+      color: #FFFFFF;
     }
   }
 
   &-nav {
-    width: 389px;
     margin-left: auto;
 
     &-link {
-      font-size: 16px;
-      line-height: 22px;
-      color: #000000;
-      margin-right: 30px;
+      font-size: 14px;
+      line-height: 19px;
+      color: #fff;
+      padding: 10px 25px;
       font-weight: bold;
+      border-right: 1px solid #fff;
+    }
+
+    &-link:last-of-type {
+      border-right: 0 !important;
+      margin-right: 5px !important;
+      padding-right: 0 !important;
     }
 
     &-link:hover {
@@ -57,7 +178,6 @@
   }
 
   .swiper-slide {
-    height: 548px;
     width: 100vw;
     background-position: center;
     background-size: cover;
@@ -81,9 +201,9 @@
   }
 
   &-card {
-    width: 925px;
-    padding: 60px 60px 20px 60px;
-    height: 258px;
+    width: fit-content;
+    padding: 30px 55px;
+    height: fit-content;
     background: #FFFFFF;
     backdrop-filter: blur(45px);
     border-radius: 10px;
@@ -107,7 +227,7 @@
       margin-top: 23px;
       display: flex;
 
-      input {
+      .v-select {
         width: 549px;
         height: 44px;
         background-color: #FFFFFF;
@@ -121,6 +241,10 @@
         font-size: 18px;
         line-height: 25px;
         color: #9D9D9D;
+      }
+      .vs__dropdown-toggle{
+        border: none !important;
+        height: 100%;
       }
     }
 
@@ -155,7 +279,7 @@
   height: 600px;
   background: #FFFFFF;
   box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.15);
-  margin: 20px 0;
+ margin-bottom: 20px;
 
   &-title {
     font-weight: bold;
@@ -181,9 +305,10 @@
   padding-top: 23px;
 
   &-show {
-   text-align: center;
+    text-align: center;
     margin-top: 10px;
-    a{
+
+    a {
       font-size: 14px;
       line-height: 14px;
       color: #272E70;
@@ -197,7 +322,7 @@
 
   &-btn {
     height: 36px;
-    background: #2C9249;
+    background-color: #3A4D6A;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -484,13 +609,15 @@
   position: relative;
   background: #FFFFFF;
   box-shadow: 0px -6px 25px rgba(0, 0, 0, 0.15);
-  .col-4{
+
+  .col-4 {
     display: flex;
     flex-direction: column;
 
     align-items: center;
   }
-  p{
+
+  p {
     font-weight: bold;
     font-size: 20px;
     line-height: 27px;
@@ -499,9 +626,11 @@
     text-align: center;
     margin-top: 40px;
   }
-  .d-flex{
+
+  .d-flex {
     flex-wrap: wrap;
   }
+
   .row {
     flex-direction: column !important;
   }
@@ -781,6 +910,7 @@
   margin-top: -20px;
   z-index: 100;
   position: relative;
+
   .container {
     height: 100%;
 
@@ -807,20 +937,24 @@
     z-index: 100;
   }
 }
-.overlay-mobile{
+
+.overlay-mobile {
   margin-top: 200px;
-  .left-col{
+}
+  .left-col {
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    &-body{
+
+    &-body {
       margin-top: 90px;
       display: flex;
       align-items: center;
       justify-content: space-between;
       width: 60%;
-      span{
+
+      span {
         font-weight: 600;
         font-size: 18px;
         line-height: 25px;
@@ -829,7 +963,8 @@
         width: 60%;
       }
     }
-    &-header{
+
+    &-header {
       font-weight: 600;
       font-size: 43px;
       line-height: 59px;
@@ -837,11 +972,12 @@
       color: #2C405C;
       width: 95%;
     }
-    &-footer{
+    &-footer {
       width: 70%;
       margin: 30px auto auto auto;
       display: flex;
       flex-direction: column;
+
       input {
         background: #FFFFFF;
         border: 1px solid #BBBBBB;
@@ -855,18 +991,21 @@
         color: #AFAFAF;
         padding-left: 16px;
       }
-      &-text{
+
+      &-text {
         font-style: normal;
         font-weight: normal;
-        margin:10px 0 0 10px;
+        margin: 10px 0 0 10px;
         font-size: 13px;
         line-height: 18px;
         color: #263648;
-        b{
+
+        b {
           color: #727375;
         }
       }
-      &-btn{
+
+      &-btn {
         width: 339px;
         margin: 30px auto auto auto;
         height: 72px;
@@ -875,12 +1014,56 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        span{
+
+        span {
           font-size: 22px;
           line-height: 30px;
           color: #FFFFFF;
         }
       }
-    }
   }
+}
+
+.autocomplete {
+  input{
+    background-repeat: no-repeat;
+    background-position: 12px;
+  }
+  ul {
+    z-index: 1000 !important;
+  }
+}
+.v-select .dropdown-toggle .clear { visibility: hidden !important; }
+.vs__open-indicator{
+  fill: #fff !important;
+}
+.main-swiper-btn{
+position: relative;
+}
+.main-swiper-btn::before{
+    content: '';
+    position: absolute;
+    border: #3A4D6A solid 3px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    -webkit-transition-duration: 0.2s;
+    -o-transition-duration: 0.2s;
+    transition-duration: 0.2s;
+    -webkit-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    -webkit-transition-timing-function: ease-out;
+    -o-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+.main-swiper-btn:hover{
+  text-decoration: none !important;
+}
+.main-swiper-btn:hover:before, .main-swiper-btn:focus:before, .main-swiper-btn:active:before {
+  top: -4px;
+  right: -4px;
+  bottom: -4px;
+  left: -4px;
 }
