--- a/tviser/assets/scss/login.scss
+++ b/tviser/assets/scss/login.scss
@@ -49,6 +49,7 @@
         justify-content: center;
         align-items: center;
         margin: auto;
+        border: none !important;
 
         span {
           font-weight: bold;
