--- a/tviser/assets/scss/login.scss
+++ b/tviser/assets/scss/login.scss
@@ -137,6 +137,8 @@
           width: 100%;
           height: 32px;
           padding-left: 12px;
+          font-size: 12px;
+          line-height: 16px;
         }
 
         input::placeholder {
@@ -163,6 +165,9 @@
         line-height: 19px;
         color: #3668AB;
         background-color: rgba(255, 255, 255, 0.80);
+      }
+      &-item:hover{
+        text-decoration: none !important;
       }
     }
   }
@@ -198,7 +203,6 @@
 }
 
 .active-tab {
-  background-color: red !important;
-  border-radius: 10px 0 0 0;
-  color: #3A4D6A !important;;
+  background-color: #3A4D6A !important;
+  color: #fff !important;;
 }
